<resources>
    <string name="app_name">UsersList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="email">Email Id</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="job">Job</string>
    <string name="enter_job">Enter Job</string>
    <string name="add_user">Add User</string>
    <string name="contact">Contact</string>
</resources>