<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".presentation.loginUser.LoginFragment">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/textView_name"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" />

        <TextView
            android:id="@+id/textView_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/job"
            app:layout_constraintStart_toStartOf="@+id/editText_name"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <EditText
            android:id="@+id/editText_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_job"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/textView_job"
            app:layout_constraintTop_toBottomOf="@+id/textView_job" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_job" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>